# chainsaw-cpp

./: .gitattributes  00_ARTIFACT_REGISTRY.md  00_DECISION_LOG.md  00_PROJECT_STATE.md  00_RISK_REGISTER.md  00_TRACEABILITY.md  README.md
.github/workflows/: ci.yml
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cpp/cmake/: Sanitizers.cmake
cpp/include/chainsaw/: cli.hpp  discovery.hpp  esedb.hpp  evtx.hpp  hunt.hpp  hve.hpp  mft.hpp  output.hpp  platform.hpp  reader.hpp  rule.hpp  search.hpp  shimcache.hpp  sigma.hpp  srum.hpp  tau.hpp  value.hpp
cpp/src/analyse/: shimcache.cpp  srum.cpp
cpp/src/app/: main.cpp
cpp/src/cli/: cli.cpp  commands.cpp
cpp/src/hunt/: hunt.cpp
cpp/src/io/: discovery.cpp  esedb.cpp  evtx.cpp  hve.cpp  mft.cpp  reader.cpp  value.cpp
cpp/src/output/: output.cpp
cpp/src/platform/: platform.cpp
cpp/src/rule/: rule.cpp  sigma.cpp
cpp/src/search/: search.cpp
cpp/src/tau/: tau.cpp
cpp/tests/: CMakeLists.txt  test_cli_basic.cpp  test_cli_gtest.cpp  test_discovery_gtest.cpp  test_dump_gtest.cpp  test_esedb_gtest.cpp  test_extended_gtest.cpp  test_hunt_gtest.cpp  test_hve_gtest.cpp  test_mft_gtest.cpp  test_output_gtest.cpp  test_platform_basic.cpp  test_platform_gtest.cpp  test_reader_gtest.cpp  test_rule_gtest.cpp  test_search_gtest.cpp  test_shimcache_gtest.cpp  test_sigma_gtest.cpp  test_srum_gtest.cpp  test_tau_gtest.cpp
cpp/tests/fixtures/: LICENSE  README.md
cpp/tests/fixtures/esedb/: invalid.edb
cpp/tests/fixtures/hve/: invalid.hve  test_minimal.hve
cpp/tests/fixtures/mft/: expected_json.json  expected_yaml.txt  invalid.mft  test_minimal.mft
cpp/tests/fixtures/rules/: rule_expression_filter.yml  rule_field_name_only.yml  rule_with_cast.yml  rule_with_title.yml  valid_rule.yml
cpp/tests/fixtures/shimcache/: Amcache.hve  README.md
cpp/tests/fixtures/srum/: README.md
cpp/tests/fixtures/xml/: array.xml  attributes.xml  complex.xml  invalid.xml  simple.xml  text.xml
docs/adr/: ADR-0001-build-system-and-cpp-standard.md  ADR-0002-dependency-management-and-vendoring.md  ADR-0003-json-library.md  ADR-0004-yaml-library.md  ADR-0005-regex-engine.md  ADR-0006-cli-and-user-visible-output.md  ADR-0007-string-formatting-and-logging.md  ADR-0008-unit-test-framework.md  ADR-0009-forensic-parsers-strategy.md  ADR-0010-filesystem-and-path-encoding.md  ADR-0011-concurrency-and-determinism.md  ADR-0012-evtx-json-eventdata-format.md
docs/architecture/: ARCH-0002-cpp-technology-options-matrix.md  TOBE-0001-cpp-to-be-architecture.md
docs/archive/: PROJECT_HISTORY.md
docs/as_is/: ARCH-0001-rust-as-is-architecture.md  CLI-0001-chainsaw-cli-contract.md  DATA-0001-data-formats-and-transformations.md  DEPS-0001-rust-dependencies.md  FEAT-0001-feature-inventory.md
docs/baseline/: BASELINE-0001-upstream.md
docs/context/: Ambrella_company_profile.docx
docs/decisions/: DEC-0001-repo-strategy.md  DEC-0002-licensing-and-third-party-policy.md  DEC-0003-golden-runs-tooling.md  DEC-0004-non-native-golden-runs-temporary.md  DEC-0005-golden-runs-paths-and-stdout.md  DEC-0006-python39-and-macos-regeneration.md  DEC-0007-linux-native-golden-runs.md  DEC-0008-exclude-local-from-repo.md  DEC-0009-public-mirror-mechanism.md  DEC-0010-cli-3vm-ssh-orchestration-baseline.md
docs/governance/: GOV-0001-traceability-and-sot.md  GOV-0002-equivalence-criteria.md  GOV-0003-architecture-approval-package.md  GOV-0004-public-repository-scope-and-audit.md  GOV-0005-public-repo-operations.md  POL-0002-green-state-policy.md
docs/guide/: GUIDE-0001-developer-guide.md
docs/inventory/: INV-0001-input-materials.md
docs/licensing/: LIC-0001-upstream-licenses.md  LIC-0002-cpp-dependencies.md  POL-0001-third-party-policy.md  POL-0003-test-data-policy.md
docs/maintenance/: MAINT-0001-maintenance-plan.md
docs/packaging/: README-dist.md  SPEC-0005-packaging-specification.md
docs/planning/: WBS-0001-work-breakdown-and-estimates.md
docs/porting/: PLAYBOOK-0001-iteration-playbook.md  SPEC-SLICE-001.md  SPEC-SLICE-002.md  SPEC-SLICE-003.md  SPEC-SLICE-004.md  SPEC-SLICE-005.md  SPEC-SLICE-006.md  SPEC-SLICE-007.md
docs/release/: RELEASE-0001-rc1-release-notes.md
docs/reports/: Architecture_Approval_2026-01-03.md  DIFF-SLICE-002-2026-01-09.md  DIFF-SLICE-003-2026-01-09.md  Gate_A_B_2025-12-25.md  Gate_B_D_2026-01-02.md  Gate_D_E_2026-01-03.md  Gate_E_F_2026-01-09.md  Gate_F_G_2026-01-14.md  HANDOFF-Step13.md  REP-0001-rust-golden-runs.md  REP-0002-consistency-audit-1.md  REP-0002-harness-comparison-baseline.md  REP-0002-parity-audit.md  REP-0003-public-package-audit.md  REP-0004-performance-profiling.md  REP-0005-optimization-validation.md  REP-0006-security-hardening.md  REP-0007-packaging-verification.md  REP-0008-e2e-validation.md  REP-0009-final-consistency-audit.md  REP-0010-rc1-verification-protocol.md  REP-Step13-golden-runs-summary.md  REPORT-0001-triple-tree-audit.md  RUN-SLICE-001-2026-01-09.md  RUN-SLICE-002-2026-01-09.md  RUN-SLICE-003-2026-01-09.md  RUN-SLICE-004-2026-01-09.md  RUN-SLICE-015-2026-01-12.md  UNITREADY-SLICE-018-2026-01-12.md
docs/requirements/: AR-0001-architectural-requirements.md  TASK-0001-problem-statement.md
docs/slices/: SPEC-SLICE-008-tau-engine.md  SPEC-SLICE-009-chainsaw-rules.md  SPEC-SLICE-010-sigma-rules.md  SPEC-SLICE-011-search-command.md  SPEC-SLICE-012-hunt-command.md  SPEC-SLICE-013-dump-command.md  SPEC-SLICE-014-lint-command.md  SPEC-SLICE-015-hve-parser.md  SPEC-SLICE-016-esedb-parser.md  SPEC-SLICE-017-analyse-srum.md  SPEC-SLICE-018-mft-parser.md  SPEC-SLICE-019-analyse-shimcache.md
docs/standards/: STD-0001-documentation-standards.md
docs/tests/: FIX-0001-cpp-test-fixtures.md  TEST-EXPAND-0001-test-expansion-plan.md  TESTMAT-0001-rust-test-matrix.md
tools/ci/: README.md  build.ps1  build.sh
